--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
     sdk: flutter
   provider: ^6.0.3
   http: ^0.13.5
+  cloud_firestore: ^4.0.1
+  firebase_core: ^2.0.0
+  firebase_messaging: ^14.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
