--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cloud_firestore: ^4.0.1
   firebase_core: ^2.0.0
   firebase_messaging: ^14.0.1
+  speech_to_text: ^6.1.0
+  avatar_glow: ^2.0.2
+  flutter_typeahead: ^4.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
